--- a/emacs.org
+++ b/emacs.org
@@ -148,7 +148,8 @@
 (if (display-graphic-p)
     (progn
       (custom-set-faces
-       '(default ((t (:background "#101515"))))
+       ;; Uncomment if you want the dark one back
+       ;; '(default ((t (:background "#101515"))))
        '(cursor ((t (:background "OrangeRed"))))
        '(mode-line-inactive ((t (:background "#101010"))))
        '(mode-line ((t (:background "#404040"))))
