recognize elc as elisp bytecode

--- a/emacs.org
+++ b/emacs.org
@@ -1144,6 +1144,7 @@ _m_  many-windows     |  _k_  step       _r_  remove break
         ("\\.cpp\\'" . c++-mode)
         ("\\.el\\'" . emacs-lisp-mode)
         ("\\.el.gz\\'" . emacs-lisp-mode)
+        ("\\.elc\\'" . elisp-byte-code-mode)
         ("\\.h\\'" . c++-mode)
         ("\\.hh\\'" . c++-mode)
         ("\\.hpp\\'" . c++-mode)
