exclude .ovpn from notes grep

--- a/emacs.org
+++ b/emacs.org
@@ -398,7 +398,7 @@
   (let* ((default-directory dir)
          (helm-ff-default-directory default-directory)
          (helm-grep-in-recurse t)
-         (helm-grep-ignored-files (cl-union (cl-union (projectile-ignored-files-rel)  grep-find-ignored-files) '("*.doc")))
+         (helm-grep-ignored-files (cl-union (cl-union (projectile-ignored-files-rel)  grep-find-ignored-files) '("*.doc" "*.ovpn")))
          (helm-grep-ignored-directories
           (cl-union (mapcar 'directory-file-name (projectile-ignored-directories-rel))
                     grep-find-ignored-directories))
