--- a/emacs.org
+++ b/emacs.org
@@ -1062,7 +1062,9 @@ _m_  many-windows     |  _k_  step       _r_  remove break
 #+END_SRC
 **** LDIF
 #+BEGIN_SRC emacs-lisp
-(use-package ldap-mode :ensure nil :defer t)
+;; (use-package ldap-mode :ensure nil :defer t)
+;;  todo: lazy load would be nice
+(require 'ldap-mode)
 #+END_SRC
 **** Json mode
 #+BEGIN_SRC emacs-lisp
