--- a/emacs.org
+++ b/emacs.org
@@ -964,8 +964,11 @@ _m_  many-windows     |  _k_  step       _r_  remove break
   :config
   (defhydra hydra-go (:color blue)
     ( "c" helm-yas-complete "yas complete"))
-    (setq lsp-gopls-codelens nil))
+  (setq lsp-gopls-codelens nil)
+  (defun my-go-mode-hook ()
+    (add-hook 'before-save-hook 'gofmt-before-save))
 
+  (add-hook 'go-mode-hook 'my-go-mode-hook))
 #+END_SRC
 **** Python
 #+BEGIN_SRC emacs-lisp
