Hydra quick open changes

--- a/emacs.org
+++ b/emacs.org
@@ -437,8 +437,8 @@
   "
 [_t_] ~/notes/temp
 [_c_] ~/.emacs.d/emacs.org
-[_;_] org rifle [_:_] grep notes
-[_l_] dired ~/.emacs.d
+[_l_] dired ~/private-sync/
+[_:_] org rifle [_;_] grep notes
 "
   ("t" (lambda ()
          (interactive)
@@ -446,8 +446,8 @@
   ("c" (lambda ()
          (interactive)
          (find-file "~/.emacs.d/emacs.org")) nil)
-  (";" helm-org-rifle-important nil)
-  (":" (lambda ()
+  (":" helm-org-rifle-important nil)
+  (";" (lambda ()
          (interactive)
          (g/helm-projectile-grep-notes "~/private-sync")) nil)
   ("l" (lambda ()
