--- a/emacs.org
+++ b/emacs.org
@@ -1030,33 +1030,33 @@ _m_  many-windows     |  _k_  step       _r_  remove break
 **** Java
 #+BEGIN_SRC emacs-lisp
 ;; lsp-java pulls the whole treemacs for itself...
-;; (use-package lsp-java :defer t)
+(use-package lsp-java :defer t)
 #+END_SRC
 
 **** typescript
 #+BEGIN_SRC emacs-lisp
-;; (use-package tide :defer t)
+(use-package tide :defer t)
 
-;; (use-package tide
-;;   :ensure t
-;;   :after (typescript-mode company flycheck)
-;;   :hook ((typescript-mode . tide-setup)
-;;          (typescript-mode . tide-hl-identifier-mode)
-;;          (before-save . tide-format-before-save)))
+(use-package tide
+  :ensure t
+  :after (typescript-mode company flycheck)
+  :hook ((typescript-mode . tide-setup)
+         (typescript-mode . tide-hl-identifier-mode)
+         (before-save . tide-format-before-save)))
 
-;; (defun setup-tide-mode ()
-;;   (interactive)
-;;   (tide-setup)
-;;   (flycheck-mode +1)
-;;   (setq flycheck-check-syntax-automatically '(save mode-enabled))
-;;   (eldoc-mode +1)
-;;   (tide-hl-identifier-mode +1)
-;;   (lsp))
+(defun setup-tide-mode ()
+  (interactive)
+  (tide-setup)
+  (flycheck-mode +1)
+  (setq flycheck-check-syntax-automatically '(save mode-enabled))
+  (eldoc-mode +1)
+  (tide-hl-identifier-mode +1)
+  (lsp))
 
-;; ;; aligns annotation to the right hand side
-;; (setq company-tooltip-align-annotations t)
+;; aligns annotation to the right hand side
+(setq company-tooltip-align-annotations t)
 
-;; (add-hook 'typescript-mode-hook #'setup-tide-mode)
+(add-hook 'typescript-mode-hook #'setup-tide-mode)
 #+END_SRC
 
 **** Powershell
