--- a/emacs.org
+++ b/emacs.org
@@ -567,14 +567,15 @@
 #+END_SRC
 ** dired
 #+BEGIN_SRC emacs-lisp
+(require 'dired-x)
 (use-package dired-subtree :defer t)
 (use-package treemacs-icons-dired :defer t)
 
 (add-hook 'dired-mode-hook
 	  (lambda ()
-	    (dired-omit-mode)
 	    (dired-hide-details-mode 1)
-	    (treemacs-icons-dired-mode)))
+	    (treemacs-icons-dired-mode)
+        (dired-omit-mode)))
 
 (use-package dired-extension :ensure nil)
 
