--- a/emacs.org
+++ b/emacs.org
@@ -618,8 +618,9 @@
   :mode (("\\.org$" . org-mode))
   :ensure org-plus-contrib
   :config
-  (require 'ob-shell)
-  (require 'ob-python)
+  ;; (require 'ob-shell)
+  ;; (require 'ob-python)
+  (eldoc-mode -1)
 
   (defhydra hydra-tab-org (:color blue)
     "
@@ -696,6 +697,7 @@
 ** Misc behaviour
 #+BEGIN_SRC emacs-lisp
 ;; set to t to investigate crashes
+(global-eldoc-mode -1)
 (setq debug-on-error nil)
 (setq inhibit-splash-screen t)
 (setq initial-scratch-message "")
@@ -1052,7 +1054,7 @@ _m_  many-windows     |  _k_  step       _r_  remove break
   (tide-setup)
   (flycheck-mode +1)
   (setq flycheck-check-syntax-automatically '(save mode-enabled))
-  (eldoc-mode +1)
+  ;; (eldoc-mode +1)
   (tide-hl-identifier-mode +1)
   (lsp))
 
