--- a/emacs.org
+++ b/emacs.org
@@ -696,8 +696,12 @@
 #+END_SRC
 ** Misc behaviour
 #+BEGIN_SRC emacs-lisp
-;; set to t to investigate crashes
+
+;; todo (Sat Jul 18 16:34:44 2020) eldoc was throwing non stop errors in org-mode. 
+;; Maybe we want to enable it back at some point *shrug*
 (global-eldoc-mode -1)
+
+;; set to t to investigate crashes
 (setq debug-on-error nil)
 (setq inhibit-splash-screen t)
 (setq initial-scratch-message "")
