--- a/emacs.org
+++ b/emacs.org
@@ -11,15 +11,16 @@
 (require 'package)
 (setq package-archives '(("gnu" . "https://elpa.gnu.org/packages/")
                          ("org" . "https://orgmode.org/elpa/")
-                         ("melpa" . "http://melpa.milkbox.net/packages/")))
+                         ("melpa" . "https://melpa.org/packages/")))
 
 ;; not needed since emacs 27
 (when (not package--initialized) (package-initialize))
 
 ;; On Windows system we'll just ignore signatures altogether...
 ;; too much hassle.
-(cond ((string-equal system-type "windows-nt")
-       (setq package-check-signature nil)))
+;;(cond ((string-equal system-type "windows-nt")
+       (setq package-check-signature nil)
+;;))
 
 ;; Make sure we have use-package installed.
 ;; All other packages will be installed by it.
