--- a/emacs.org
+++ b/emacs.org
@@ -1450,7 +1450,8 @@ eyebrowse               frame management
         (message "%s" str) str)))
 
 (defun display-startup-echo-area-message ()
-  (message (concat "Emacs took " (emacs-init-time) " seconds to start.")))
+  (message (concat "Emacs took " (emacs-init-time) " seconds to start."
+		   (if (boundp' native-compile-async) " With native compiler!"))))
 #+END_SRC
 
 * ALIAS
