--- a/emacs.org
+++ b/emacs.org
@@ -117,49 +117,40 @@
 
 ** Themes and colours
 #+BEGIN_SRC emacs-lisp
-(custom-set-variables
- '(custom-safe-themes
-   (quote
-    ("a27c00821ccfd5a78b01e4f35dc056706dd9ede09a8b90c6955ae6a390eb1c1e"
-     "3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default))))
+(customize-set-variable 'custom-enabled-themes '(wombat))
+
+(customize-set-variable
+ 'custom-safe-themes '("3c83b3676d796422704082049fc38b6966bcad960f896669dfc21a7a37a748fa" default))
 
 (custom-set-faces
  '(org-level-1 ((t (:inherit outline-1 :weight demibold :foreground "DarkOrange3" :height 1.2))))
  '(org-level-2 ((t (:inherit outline-2 :weight demibold :foreground "darkOliveGreen3" :height 1.2))))
  '(org-level-3 ((t (:inherit outline-3 :weight demibold :height 1.1))))
  '(org-level-4 ((t (:inherit outline-4 :weight demibold :height 1.0))))
- '(org-level-5 ((t (:inherit outline-5 :weight demibold :height 1.0)))))
+ '(org-level-5 ((t (:inherit outline-5 :weight demibold :height 1.0))))
 
-(custom-set-variables
- '(custom-enabled-themes (quote (wombat))))
+ '(default ((t (:background "#131818"))))
+ '(cursor ((t (:background "OrangeRed"))))
+ '(mode-line-inactive ((t (:background "#101010"))))
+ '(mode-line ((t (:background "#404040"))))
+ '(hl-line ((t (:inherit nil :background "#222222"))))
+ '(minibuffer-prompt ((t (:foreground "#ff584d"))))
 
-;; Terminal displays are often not happy about certain colours, so we only set them if we are running
-;; within a graphic display environment
-(if (display-graphic-p)
-    (progn
-      (custom-set-faces
-       '(default ((t (:background "#131818"))))
-       '(cursor ((t (:background "OrangeRed"))))
-       '(mode-line-inactive ((t (:background "#101010"))))
-       '(mode-line ((t (:background "#404040"))))
-       '(hl-line ((t (:inherit nil :background "#222222"))))
-       '(minibuffer-prompt ((t (:foreground "#ff584d"))))
+ ;; Make some default wombat colours a bit more lively
+ '(font-lock-builtin-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
+ '(font-lock-constant-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
 
-       ;; Make some default wombat colours a bit more lively
-       '(font-lock-builtin-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
-       '(font-lock-constant-face ((((class color) (min-colors 89)) (:foreground "#ff685d"))))
+ ;; Some default helm faces are quite ugly... let's fix em up.
+ '(helm-selection ((t (:background "grey24" :distant-foreground "black"))))
+ '(helm-buffer-directory ((t (:weight bold :foreground "LightSlateBlue" :distant-foreground "black"))))
+ '(helm-ff-directory ((t :inherit helm-buffer-directory )))
+ '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif")))))
 
-       ;; Some default helm faces are quite ugly... let's fix em up.
-       '(helm-selection ((t (:background "grey24" :distant-foreground "black"))))
-       '(helm-buffer-directory ((t (:weight bold :foreground "LightSlateBlue" :distant-foreground "black"))))
-       '(helm-ff-directory ((t :inherit helm-buffer-directory )))
-       '(helm-source-header ((t (:background "#450a6b" :foreground "#dddddd" :weight bold :height 1.3 :family "Sans Serif")))))
+(set-font-for-current-resolution)
 
-      (set-font-for-current-resolution)
+(global-hl-line-mode t)
 
-      (global-hl-line-mode t)
-
-      (use-package smart-mode-line :ensure t :config (sml/setup))))
+(use-package smart-mode-line :ensure t :config (sml/setup))
 #+END_SRC
 
 ** Font rendering
