commenting out lsp-java

--- a/emacs.org
+++ b/emacs.org
@@ -1004,7 +1004,7 @@ _m_  many-windows     |  _k_  step       _r_  remove break
 **** Java
 #+BEGIN_SRC emacs-lisp
 ;; lsp-java pulls the whole treemacs for itself...
-(use-package lsp-java :defer t)
+;; (use-package lsp-java :defer t)
 #+END_SRC
 
 **** typescript
